--- a/index.html
+++ b/index.html
@@ -15,14 +15,231 @@
         </div>
         <h3 class="logo__text">PRACTICUM ART GALLERY</h3>
       </header>
+
       <section class="lead">
         <h1 class="lead__title">De patria a patria</h1>
-        <h2 class="lead__subtitle">
+        <h3 class="lead__subtitle">
           Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
-        </h2>
+        </h3>
         <img class="lead__hero-image" src="" alt="" />
       </section>
-      <section></section>
+
+      <section class="intro">
+        <h2 class="intro__title">
+          Conoce un poco mejor los lugares de los que proceden tus colegas en
+          línea
+        </h2>
+        <p class="intro__quote">
+          Todo ser humano es un artista, un ser de la libertad, llamado a
+          participar en la transformación y reforma de las condiciones, el
+          pensamiento y las estructuras que conforman e influyen en nuestras
+          vidas.
+        </p>
+        <span class="intro__author">— Joseph Beuys</span>
+        <p class="intro__text">
+          La ciudad de Practicum ha reunido a profesionales de diferentes
+          rincones del mundo. Hoy, la Galería de Arte Practicum se enorgullece
+          de presentar historias y fotografías de algunas de las personas que
+          dedican su tiempo y esfuerzo a hacer que los futuros profesionales de
+          la tecnología de esta ciudad se sientan como en casa. Cada uno de
+          nosotros tiene una historia única sobre el lugar del que procede. No
+          dudes en añadir a nuestra colección tu propia historia y una obra de
+          arte visual dedicada a tu ciudad natal. No importa de dónde seas, nos
+          alegra que seas nuestro vecino.
+        </p>
+      </section>
+
+      <section class="photo-grid">
+        <ul class="photo-grid__table">
+          <li class="photo-grid__image">
+            <img src="./images/1.jpg" alt="An image of a beach" />
+          </li>
+          <li class="photo-grid__image">
+            <img src="./images/2.png" alt="A photo of a city with sea" />
+          </li>
+          <li class="photo-grid__image">
+            <img src="./images/3.png" alt="A photo of a chuch with a sunset" />
+          </li>
+          <li class="photo-grid__image">
+            <img src="./images/4.png" alt="A photo of a city with a beach" />
+          </li>
+          <li class="photo-grid__image">
+            <img
+              src="./images/5.png"
+              alt="A photo of a field with green grass"
+            />
+          </li>
+          <li class="photo-grid__image">
+            <img src="./images/6.png" alt="A photo of a park with signs" />
+          </li>
+          <li class="photo-grid__image">
+            <img
+              src="./images/7.png"
+              alt="Photo of someone outside of their rural home"
+            />
+          </li>
+          <li class="photo-grid__image">
+            <img src="./images/8.png" alt="Photo of two houses in the field" />
+          </li>
+        </ul>
+      </section>
+
+      <section class="places">
+        <div class="place">
+          <div class="place__column">
+            <h2 class="place__title">Kiev, Ucrania</h2>
+            <img
+              class="place__image"
+              src="./images/kiev.png"
+              alt="Photo of Kiev"
+            />
+            <button class="place__button">
+              <a href="#">Compra esta obra de arte como NFT</a>
+            </button>
+          </div>
+          <div class="place__column">
+            <span class="place__artist">ARTISTA</span>
+            <p class="place__text">
+              Natalia Dolgushina, productora de contenidos
+            </p>
+            <p class="place__text">
+              Kiev (o Kyiv), la capital de Ucrania, es una gran ciudad situada a
+              orillas del río Dniéper. Por supuesto, nadie en su sano juicio se
+              bañaría en el río, a menos que se haya criado aquí, en cuyo caso
+              probablemente lo haya intentado en algún momento. Los veranos son
+              calurosos aquí, y los inviernos con fuertes corrientes de aire,
+              pero el otoño y la primavera son absolutamente increíbles.
+            </p>
+            <p class="place__text">
+              La ciudad en sí es una mezcla de arquitectura prerrevolucionaria,
+              de posguerra y soviética, toda ella salpicada de balcones
+              modificados. Si te encuentras en la orilla derecha del Dniéper, el
+              paisaje es difícil de atravesar para las personas en bicicleta y
+              las que llevan tacones. Sin embargo, la orilla izquierda es
+              considerada mucho menos interesante y prestigiosa, incluso por la
+              gente que vive en las afueras de la derecha.
+            </p>
+          </div>
+          <div class="place__column">
+            <h2 class="place__title">Criccieth, Gales</h2>
+            <img
+              class="place__image"
+              src="./images/criccieth.png"
+              alt="A photo of Criccieth, Gales"
+            />
+            <button class="place__button">
+              <a href="#">Compra esta obra de arte como NFT</a>
+            </button>
+          </div>
+          <div class="place__column">
+            <span class="place__artist">ARTISTAS</span>
+            <p class="place__text">Kseniya Glagoleva, directora del proyecto</p>
+            <p class="place__text">
+              La ruina medieval del castillo de Criccieth domina la ciudad desde
+              una roca que se adentra en el mar. Se cree que fue construido por
+              Llewelyn el Grande en el siglo XIII. Unos 900 años después, la
+              autodenominada *Perla de Gales a orillas de Snowdonia* se ha
+              convertido en un popular destino turístico durante los meses de
+              verano.
+            </p>
+            <p class="place__text">
+              A poca distancia del castillo, se puede disfrutar del mejor helado
+              del mundo en Cadwalader's, cuyo ingrediente secreto se rumorea que
+              son las algas de la zona. Otro reclamo a la fama es el hecho de
+              que Criccieth ganó el premio *Wales in Bloom* durante cinco años
+              consecutivos por sus espectaculares exhibiciones florales
+              alrededor de la ciudad. También fue el hogar de David Lloyd
+              George, el único galés que ocupó el cargo de Primer Ministro del
+              Reino Unido.
+            </p>
+          </div>
+          <div class="place__column">
+            <h2 class="place__title">Berea, Estados Unidos</h2>
+            <img
+              class="place__image"
+              src="./images/berea.png"
+              alt="Photo of Berea"
+            />
+            <button class="place__button">
+              <a href="#">Compra esta obra de arte como NFT</a>
+            </button>
+          </div>
+          <div class="place__column">
+            <span class="place__artist">ARTISTA</span>
+            <p class="place__text">Travis Turner, autor y editor</p>
+            <p class="place__text">
+              Berea es una pequeña ciudad situada en la parte central de
+              Kentucky. La ciudad está rodeada de hermosos bosques y campos. Es
+              conocida como la capital del arte y la artesanía del estado, y los
+              visitantes encontrarán muchas oportunidades de compra: tiendas con
+              joyas hechas a mano, velas, artículos de madera, galerías,
+              estudios de vidrio y mucho más. La ciudad celebra cada año un
+              festival en el que se festeja el "spoonbread", un plato local
+              hecho con pan de maíz y servido con una cuchara de madera.
+            </p>
+            <p class="place__text">
+              Sin embargo, es probablemente más conocido por la universidad
+              local Berea College se fundó en 1855 y fue la primera universidad
+              del sur de EE.UU. en estar integrada racialmente, así como la
+              primera en ser coeducativa. De manera singular, no cobra
+              matrícula: todos los estudiantes reciben una beca de matrícula
+              completa.
+            </p>
+          </div>
+          <div class="place__column">
+            <h2 class="place__title">Muramvya, Burundi</h2>
+            <img
+              class="place__image"
+              src="./images/muramvya.png"
+              alt="photo of muramvya"
+            />
+            <button class="place__button">
+              <a href="#">Compra esta obra de arte como NFT</a>
+            </button>
+          </div>
+          <div class="place__column">
+            <span class="place__artist">ARTISTA</span>
+            <p class="place__text">Grevisse Kenguruka, editor técnico</p>
+            <p class="place__text">
+              Muramvya es una de las 18 provincias de Burundi. En la época del
+              reino, Muramvya era la capital real y en 2007, por su cultura y
+              paisaje natural, fue incluida en la lista indicativa del
+              Patrimonio Cultural Mundial de la UNESCO. Está situada en el
+              centro de Burundi, entre las capitales política y económica del
+              país.
+            </p>
+            <p class="place__text">
+              El clima es más bien frío por la noche, pero durante el día,
+              creerás que estás en el paraíso. A 2.665 metros sobre el nivel del
+              mar, el monte Teza es uno de los lugares más fríos de la
+              provincia. Pero esa brisa fresca permite el crecimiento de una de
+              las mayores plantaciones de té y café del país, que constituyen la
+              mayor parte de las exportaciones de Burundi.
+            </p>
+            <p class="place__text">
+              El Parque Nacional de Kibira, una de las mayores reservas de fauna
+              silvestre para simios, se extiende por cuatro provincias, incluida
+              Muramvya. Este Parque Nacional se encuentra en el vértice de las
+              hermosas montañas de la divisoria Congo-Nilo, que oscilan entre
+              los 1.550 y los 2.660 metros de altitud. Está lleno de hermosa
+              vegetación, y es una fuente para los diversos ríos y arroyos que
+              proporcionan agua en todo el país
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="cover">
+        <h2 class="cover__title">Visítanos</h2>
+        <p class="cover__subtitle">
+          Todo el año Galería de Arte de Practicum 404, Avenida Tim Berners-Lee.
+        </p>
+        <button class="cover__button">Comprar entradas</button>
+      </section>
+
+      <footer class="footer">
+        <p class="footer__author">© 2023. Ara Ventura</p>
+      </footer>
     </main>
   </body>
 </html>
