add css for logo

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <main class="page">
-      <header class="header">
-        <div class="logo">
+      <header class="logo">
+        <div class="logo__block">
           <div class="logo__line logo__line_position_horizontal"></div>
           <div class="logo__line logo__line_position_vertical"></div>
         </div>
