add styles on lead block

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         <h3 class="lead__subtitle">
           Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
         </h3>
-        <img class="lead__hero-image" src="" alt="" />
+        <img
+          class="lead__hero-image"
+          src="./images/lead_image.png"
+          alt="Photo of a city with a beach"
+        />
       </section>
 
       <section class="intro">
