add style to places

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
       <section class="places">
         <div class="place">
-          <div class="place__column">
+          <div class="place__column place__column_place_left">
             <h2 class="place__title">Kiev, Ucrania</h2>
             <img
               class="place__image"
@@ -108,7 +108,7 @@
               <a href="#">Compra esta obra de arte como NFT</a>
             </button>
           </div>
-          <div class="place__column">
+          <div class="place__column place__column_place_right">
             <span class="place__artist">ARTISTA</span>
             <p class="place__text">
               Natalia Dolgushina, productora de contenidos
@@ -131,7 +131,9 @@
               gente que vive en las afueras de la derecha.
             </p>
           </div>
-          <div class="place__column">
+        </div>
+        <div class="place">
+          <div class="place__column place__column_place_left">
             <h2 class="place__title">Criccieth, Gales</h2>
             <img
               class="place__image"
@@ -142,7 +144,7 @@
               <a href="#">Compra esta obra de arte como NFT</a>
             </button>
           </div>
-          <div class="place__column">
+          <div class="place__column place__column_place_right">
             <span class="place__artist">ARTISTAS</span>
             <p class="place__text">Kseniya Glagoleva, directora del proyecto</p>
             <p class="place__text">
@@ -164,7 +166,9 @@
               Reino Unido.
             </p>
           </div>
-          <div class="place__column">
+        </div>
+        <div class="place">
+          <div class="place__column place__column_place_left">
             <h2 class="place__title">Berea, Estados Unidos</h2>
             <img
               class="place__image"
@@ -175,7 +179,7 @@
               <a href="#">Compra esta obra de arte como NFT</a>
             </button>
           </div>
-          <div class="place__column">
+          <div class="place__column place__column_place_right">
             <span class="place__artist">ARTISTA</span>
             <p class="place__text">Travis Turner, autor y editor</p>
             <p class="place__text">
@@ -197,7 +201,9 @@
               completa.
             </p>
           </div>
-          <div class="place__column">
+        </div>
+        <div class="place">
+          <div class="place__column place__column_place_left">
             <h2 class="place__title">Muramvya, Burundi</h2>
             <img
               class="place__image"
@@ -208,7 +214,7 @@
               <a href="#">Compra esta obra de arte como NFT</a>
             </button>
           </div>
-          <div class="place__column">
+          <div class="place__column place__column_place_right">
             <span class="place__artist">ARTISTA</span>
             <p class="place__text">Grevisse Kenguruka, editor técnico</p>
             <p class="place__text">
