add styles for footer and cover blocks

--- a/index.html
+++ b/index.html
@@ -248,10 +248,11 @@
 
       <section class="cover">
         <h2 class="cover__title">Visítanos</h2>
+        <img src="./images/footer_image.png" alt="a photo of a field" />
         <p class="cover__subtitle">
           Todo el año Galería de Arte de Practicum 404, Avenida Tim Berners-Lee.
         </p>
-        <button class="cover__button">Comprar entradas</button>
+        <button class="cover__button"><a href="#">Comprar entradas</a></button>
       </section>
 
       <footer class="footer">
