change margins and paddings

--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
         </div>
         <div class="place">
           <div class="place__column place__column_place_left">
-            <h2 class="place__title">Berea, Estados Unidos</h2>
+            <h2 class="place__title place__title_width_long">
+              Berea, Estados Unidos
+            </h2>
             <img
               class="place__image"
               src="./images/berea.png"
@@ -250,7 +252,8 @@
         <h2 class="cover__title">Visítanos</h2>
         <img src="./images/footer_image.png" alt="a photo of a field" />
         <p class="cover__subtitle">
-          Todo el año Galería de Arte de Practicum 404, Avenida Tim Berners-Lee.
+          Todo el año <br />
+          Galería de Arte de Practicum 404, Avenida Tim Berners-Lee.
         </p>
         <button class="cover__button"><a href="#">Comprar entradas</a></button>
       </section>
