work on styles for 320

--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
 
       <section class="places">
         <div class="place">
-          <div class="place__column place__column_place_left">
             <h2 class="place__title">Kiev, Ucrania</h2>
             <img
               class="place__image"
@@ -107,12 +106,16 @@
             <button class="place__button">
               <a href="#">Compra esta obra de arte como NFT</a>
             </button>
-          </div>
-          <div class="place__column place__column_place_right">
-            <span class="place__artist">ARTISTA</span>
-            <p class="place__text">
+            <div class="place__artist-wrapper">
+                <span class="place__artist">ARTISTA</span>
+                <p class="place__text place__text_artist">
+                    Natalia Dolgushina, productora de contenidos
+                </p>
+            </div>
+            <!-- <span class="place__artist">ARTISTA</span>
+            <p class="place__text place__text_artist">
               Natalia Dolgushina, productora de contenidos
-            </p>
+            </p> -->
             <p class="place__text">
               Kiev (o Kyiv), la capital de Ucrania, es una gran ciudad situada a
               orillas del río Dniéper. Por supuesto, nadie en su sano juicio se
@@ -130,10 +133,8 @@
               considerada mucho menos interesante y prestigiosa, incluso por la
               gente que vive en las afueras de la derecha.
             </p>
-          </div>
         </div>
         <div class="place">
-          <div class="place__column place__column_place_left">
             <h2 class="place__title">Criccieth, Gales</h2>
             <img
               class="place__image"
@@ -143,10 +144,10 @@
             <button class="place__button">
               <a href="#">Compra esta obra de arte como NFT</a>
             </button>
-          </div>
-          <div class="place__column place__column_place_right">
             <span class="place__artist">ARTISTAS</span>
-            <p class="place__text">Kseniya Glagoleva, directora del proyecto</p>
+            <p class="place__text place__text_artist">
+              Kseniya Glagoleva, directora del proyecto
+            </p>
             <p class="place__text">
               La ruina medieval del castillo de Criccieth domina la ciudad desde
               una roca que se adentra en el mar. Se cree que fue construido por
@@ -165,10 +166,8 @@
               George, el único galés que ocupó el cargo de Primer Ministro del
               Reino Unido.
             </p>
-          </div>
         </div>
         <div class="place">
-          <div class="place__column place__column_place_left">
             <h2 class="place__title place__title_width_long">
               Berea, Estados Unidos
             </h2>
@@ -180,10 +179,10 @@
             <button class="place__button">
               <a href="#">Compra esta obra de arte como NFT</a>
             </button>
-          </div>
-          <div class="place__column place__column_place_right">
             <span class="place__artist">ARTISTA</span>
-            <p class="place__text">Travis Turner, autor y editor</p>
+            <p class="place__text place__text_artist">
+              Travis Turner, autor y editor
+            </p>
             <p class="place__text">
               Berea es una pequeña ciudad situada en la parte central de
               Kentucky. La ciudad está rodeada de hermosos bosques y campos. Es
@@ -205,7 +204,6 @@
           </div>
         </div>
         <div class="place">
-          <div class="place__column place__column_place_left">
             <h2 class="place__title">Muramvya, Burundi</h2>
             <img
               class="place__image"
@@ -215,10 +213,10 @@
             <button class="place__button">
               <a href="#">Compra esta obra de arte como NFT</a>
             </button>
-          </div>
-          <div class="place__column place__column_place_right">
             <span class="place__artist">ARTISTA</span>
-            <p class="place__text">Grevisse Kenguruka, editor técnico</p>
+            <p class="place__text place__text_artist">
+              Grevisse Kenguruka, editor técnico
+            </p>
             <p class="place__text">
               Muramvya es una de las 18 provincias de Burundi. En la época del
               reino, Muramvya era la capital real y en 2007, por su cultura y
@@ -244,7 +242,6 @@
               vegetación, y es una fuente para los diversos ríos y arroyos que
               proporcionan agua en todo el país
             </p>
-          </div>
         </div>
       </section>
 
