add styles to cover and places

--- a/index.html
+++ b/index.html
@@ -103,19 +103,15 @@
               src="./images/kiev.png"
               alt="Photo of Kiev"
             />
-            <button class="place__button">
-              <a href="#">Compra esta obra de arte como NFT</a>
-            </button>
+                <button class="place__button">
+                <a href="#">Compra esta obra de arte como NFT</a>
+                </button>
             <div class="place__artist-wrapper">
                 <span class="place__artist">ARTISTA</span>
                 <p class="place__text place__text_artist">
                     Natalia Dolgushina, productora de contenidos
                 </p>
             </div>
-            <!-- <span class="place__artist">ARTISTA</span>
-            <p class="place__text place__text_artist">
-              Natalia Dolgushina, productora de contenidos
-            </p> -->
             <p class="place__text">
               Kiev (o Kyiv), la capital de Ucrania, es una gran ciudad situada a
               orillas del río Dniéper. Por supuesto, nadie en su sano juicio se
@@ -144,10 +140,12 @@
             <button class="place__button">
               <a href="#">Compra esta obra de arte como NFT</a>
             </button>
-            <span class="place__artist">ARTISTAS</span>
-            <p class="place__text place__text_artist">
-              Kseniya Glagoleva, directora del proyecto
-            </p>
+            <div class="place__artist-wrapper">
+                <span class="place__artist">ARTISTAS</span>
+                <p class="place__text place__text_artist">
+                Kseniya Glagoleva, directora del proyecto
+                </p>
+            </div>
             <p class="place__text">
               La ruina medieval del castillo de Criccieth domina la ciudad desde
               una roca que se adentra en el mar. Se cree que fue construido por
@@ -179,10 +177,12 @@
             <button class="place__button">
               <a href="#">Compra esta obra de arte como NFT</a>
             </button>
-            <span class="place__artist">ARTISTA</span>
-            <p class="place__text place__text_artist">
-              Travis Turner, autor y editor
-            </p>
+            <div class="place__artist-wrapper">
+                <span class="place__artist">ARTISTA</span>
+                <p class="place__text place__text_artist">
+                Travis Turner, autor y editor
+                </p>
+            </div>
             <p class="place__text">
               Berea es una pequeña ciudad situada en la parte central de
               Kentucky. La ciudad está rodeada de hermosos bosques y campos. Es
@@ -213,10 +213,12 @@
             <button class="place__button">
               <a href="#">Compra esta obra de arte como NFT</a>
             </button>
-            <span class="place__artist">ARTISTA</span>
-            <p class="place__text place__text_artist">
-              Grevisse Kenguruka, editor técnico
-            </p>
+            <div class="place__artist-wrapper">
+                <span class="place__artist">ARTISTA</span>
+                <p class="place__text place__text_artist">
+                Grevisse Kenguruka, editor técnico
+                </p>
+            </div>
             <p class="place__text">
               Muramvya es una de las 18 provincias de Burundi. En la época del
               reino, Muramvya era la capital real y en 2007, por su cultura y
