--- a/index.html
+++ b/index.html
@@ -233,9 +233,7 @@
               mar, el monte Teza es uno de los lugares más fríos de la
               provincia. Pero esa brisa fresca permite el crecimiento de una de
               las mayores plantaciones de té y café del país, que constituyen la
-              mayor parte de las exportaciones de Burundi.
-            </p>
-            <p class="place__text">
+              mayor parte de las exportaciones de Burundi. <br> <br>
               El Parque Nacional de Kibira, una de las mayores reservas de fauna
               silvestre para simios, se extiende por cuatro provincias, incluida
               Muramvya. Este Parque Nacional se encuentra en el vértice de las
