complete dimensions of tablet

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="place__artist-wrapper">
                 <span class="place__artist">ARTISTAS</span>
                 <p class="place__text place__text_artist">
-                Kseniya Glagoleva, directora del proyecto
+                    Steffan Warren, editor principal <br> Kseniya Glagoleva, directora del proyecto
                 </p>
             </div>
             <p class="place__text">
