--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>De patria a patria</title>
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Istok+Web:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <main class="page">
@@ -141,9 +135,11 @@
             Compra esta obra de arte como NFT
           </button>
           <div class="place__artist-wrapper">
-            <span class="place__artist">ARTISTAS</span>
+            <p class="place__artist">ARTISTAS</p>
+            <span class="place__text place__text_artist">
+              Steffan Warren, editor principal
+            </span>
             <p class="place__text place__text_artist">
-              Steffan Warren, editor principal <br />
               Kseniya Glagoleva, directora del proyecto
             </p>
           </div>
@@ -224,30 +220,33 @@
             Cultural Mundial de la UNESCO. Está situada en el centro de Burundi,
             entre las capitales política y económica del país.
           </p>
-          <p class="place__text">
-            El clima es más bien frío por la noche, pero durante el día, creerás
-            que estás en el paraíso. A 2.665 metros sobre el nivel del mar, el
-            monte Teza es uno de los lugares más fríos de la provincia. Pero esa
-            brisa fresca permite el crecimiento de una de las mayores
-            plantaciones de té y café del país, que constituyen la mayor parte
-            de las exportaciones de Burundi. <br />
-            <br />
-            El Parque Nacional de Kibira, una de las mayores reservas de fauna
-            silvestre para simios, se extiende por cuatro provincias, incluida
-            Muramvya. Este Parque Nacional se encuentra en el vértice de las
-            hermosas montañas de la divisoria Congo-Nilo, que oscilan entre los
-            1.550 y los 2.660 metros de altitud. Está lleno de hermosa
-            vegetación, y es una fuente para los diversos ríos y arroyos que
-            proporcionan agua en todo el país
-          </p>
+          <div class="place__text">
+            <p>
+              El clima es más bien frío por la noche, pero durante el día,
+              creerás que estás en el paraíso. A 2.665 metros sobre el nivel del
+              mar, el monte Teza es uno de los lugares más fríos de la
+              provincia. Pero esa brisa fresca permite el crecimiento de una de
+              las mayores plantaciones de té y café del país, que constituyen la
+              mayor parte de las exportaciones de Burundi.
+            </p>
+            <p>
+              El Parque Nacional de Kibira, una de las mayores reservas de fauna
+              silvestre para simios, se extiende por cuatro provincias, incluida
+              Muramvya. Este Parque Nacional se encuentra en el vértice de las
+              hermosas montañas de la divisoria Congo-Nilo, que oscilan entre
+              los 1.550 y los 2.660 metros de altitud. Está lleno de hermosa
+              vegetación, y es una fuente para los diversos ríos y arroyos que
+              proporcionan agua en todo el país
+            </p>
+          </div>
         </div>
       </section>
 
       <section class="cover">
         <h2 class="cover__title">Visítanos</h2>
         <img src="./images/footer_image.png" alt="a photo of a field" />
+        <p class="cover__subtitle">Todo el año</p>
         <p class="cover__subtitle">
-          Todo el año <br />
           Galería de Arte de Practicum 404, Avenida Tim Berners-Lee.
         </p>
         <button class="cover__button">Comprar entradas</button>
